--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/* ------------------CELLPHONE---------------------------------- */
+t /* ------------------CELLPHONE---------------------------------- */
 
 body {
   background-color: #17202a;
