--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,22 @@
-t /* ------------------CELLPHONE---------------------------------- */
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
+/* ------------------CELLPHONE---------------------------------- */
 
 body {
   background-color: #17202a;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:Arial, Helvetica, sans-serif;
+  padding: 20px;
 }
 header {
   display: flex;
   flex-direction: column;
 }
+
+h1 b:nth-child(1) { 
+  color: rgb(19, 49, 179); }
+
+
 header > p {
   font-size: 22px;
   font-family: Arial, Helvetica, sans-serif;
@@ -38,15 +46,12 @@ li {
   display: flex;
 }
 
-.main_layer > .bg1 {
-  background-image: url();
-}
-
 footer a:hover {
-  color: white;
+  color: rgb(8, 5, 145);
 }
 footer li,
 a {
+  color: white;
   list-style: none;
   text-decoration: none;
   align-items: center;
@@ -54,17 +59,43 @@ a {
 footer ul {
   display: flex;
   flex-direction: row;
-  font-size: smaller;
-  background-color: slategray;
+  justify-content: space-around;
+  align-items: center;
   list-style: none;
 }
+/* ---------------------Burger Button------------------------------------ */
+
+.btn_layer,
+.btn_layer2,
+.btn_layer3 {
+    background-color: rgb(255, 255, 255);
+    width: 60px;
+    height: 10px;
+    margin: 6px;
+    border-radius: 5px;
+}
+
+.btn_layer:hover {
+    background-color: rgb(13, 16, 187);
+}
+
+.btn_button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+}
+
+
+
 /* ---------------------dropdown Menü----------------------------------------- */
 .dropbtn {
   background-repeat: no-repeat;
   background-size: cover;
   margin: 10px;
   width: 40px;
-  padding: vw;
+  padding: 10vw;
   height: 40px;
   border: none;
   cursor: pointer;
@@ -91,13 +122,8 @@ footer ul {
   display: block;
 }
 
-/* ---------------------Burger Button------------------------------------ */
 
-.burgernav {
-  background-color: rgb(173, 2, 2);
-  height: 40px;
-  width: 40px;
-}
+
 @media only screen and (min-width: 499px) {
   body {
     display: flex;
@@ -114,10 +140,14 @@ footer ul {
     );
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: arial;
+  }
+  .btn_layer{
+    display:none;
   }
   header > h1 {
     display: flex;
-    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    font-family: 'Russo One';
     font-size: 100px;
     text-align: center;
     color: white;
@@ -131,41 +161,67 @@ footer ul {
     display: flex;
     flex-direction: row;
   }
-
+  
+  /* -------------------------------------Navi------------------------------------------- */
   .navi {
     display: flex;
     justify-content: space-between;
     margin: 10px;
+    font-family: 'Russo One';
     font-size: 30px;
   }
 
+  .navi:hover b:nth-child(1) { 
+  color: rgb(19, 49, 179); 
+
+}
+
   .navi > p:hover {
     color: rgb(255, 255, 255);
-    font-weight: bold;
     text-shadow: 1px 1px 1px rgb(0, 0, 0);
     cursor: pointer;
   }
-
+/* -----------------------------------Main Content--------------------------------------------------------- */
   .main_content {
     display: flex;
+    padding: 10px;
     color: white;
     background-color: rgba(4, 4, 102, 0.918);
     border: 1px white solid;
-    height: 300px;
-    width: 600px;
+    height: 600px;
+    width: 800px;
     opacity: 0.5;
   }
 
-  .main_content:hover {
-    border-left: 1px black solid;
-  }
-  .main_content:hover {
-    border-right: 1px black solid;
-  }
   .sub_content {
     position: absolute;
 
   }
+.typewriter h1 {
+  color: #fff;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+}
+
   .dropbtn {
     display: none;
   }
