--- a/css/layout2/main.css
+++ b/css/layout2/main.css
@@ -59,11 +59,15 @@ body {
 
 .navi {
     display: flex;
-    justify-content: space-between;
+    text-align: center;
+    justify-content:space-around;
     font-family: "Russo One";
-    margin-bottom: 100px;
     font-size: 30px;
     border: 1px black solid;
+}
+
+.grid-container > .nav > .navi{
+    margin-top: 30px;
 }
 
 .navi:hover b:nth-child(1) {
@@ -81,12 +85,17 @@ body {
     cursor: pointer;
 }
 
-.main {
+
+.main > .img_about{
 
     background-image: url(/itsme.png);
-    background-size: contain;
     background-repeat: no-repeat;
-    /* opacity: 0.5; */
+    background-size: cover;
+    width: 20%;
+    height: 900px;
+    /* opacity: 0.5;  */
+     margin-top: -500px;
+     position: fixed;
 }
 
 .footer {
