--- a/css/layout2/main.css
+++ b/css/layout2/main.css
@@ -17,14 +17,18 @@
 }
 .nav {
   grid-area: nav; 
+  display: flex;
+  justify-content: right;
   margin-left: 200px;
+  margin-bottom: 100px;
 }
 .right {
   grid-area: right;
-  text-align: r;
+  position: absolute;
 }
 .left {
-  grid-area: left;
+    display: inline-flex;
+
 
 }
 .main {
@@ -44,7 +48,7 @@ body {
   background-size: cover;
 }
 
-.grid-container > .header > h1 {
+.headline > h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,6 +57,7 @@ body {
   text-align: center;
   color: white;
   text-shadow: 5px 5px 30px black;
+  padding: 10px;M
 }
 
 .grid-container h1 > b:nth-child(1) {
@@ -105,7 +110,7 @@ body {
     display: flex;
     justify-content: right;
     margin-top: 6%;
-    color: red;
+    color: rgb(255, 255, 255);
     background-color: rgb(30, 30, 66);
     font-size: 30px;
     padding-right: 70px;
@@ -113,6 +118,7 @@ body {
     height: 300px;
     opacity: 0.5;
 }
+
 
 .footer > p{
     color: rgb(11, 62, 156);
