--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.google.com/specimen/Russo+One?selection.family=Russo+One);
+
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
