--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.google.com/specimen/Russo+One?selection.family=Russo+One);
+@import url('https://fonts.google.com/specimen/Russo+One?selection.family=Russo+One');
 
 .grid-container {
   display: grid;
